--- a/chapter3-methodology.tex
+++ b/chapter3-methodology.tex
@@ -300,6 +300,7 @@ The characteristics of the previously mentioned datasets are described below and
         
         \textbf{Normalized Discounted Proportional Fairness ($NDPF$)}
 
+        \todo[inline]{look at Weiwen's latest paper that uses a version of this measure}
         % Here we introduce the discounted proportional fairness metric which we adopted based on the well-accepted and axiomatically justified metric of fairness, the proportional fairness \cite{kelly1998rate}. Proportional fairness is a generalized Nash solution for multiple groups.
         Ideal Discounted proportional fairness is achieved when
         \begin{equation}
