--- a/chapter5-postprocess.tex
+++ b/chapter5-postprocess.tex
@@ -8,9 +8,10 @@
 \section{FAR/PFAR}
     % \input chapter5-farpfar.tex
 
-\section{OFAIR}
-    % \input chapter5-ofair.tex
+\section{Opportunistic Multi-aspect Fairness through Personalized Re-ranking (OFAIR)}
+    \input chapter5-ofair.tex
+    
     
 \section{Social Choice for Re-ranking Under Fairness (SCRUF): Dynamic Lotteries for Multi-group Fairness-Aware Recommendation}
-    \input chapter5-dynamicfair.tex
-%     (provider fairness)
+    % \input chapter5-dynamicfair.tex
+
