--- a/main.tex
+++ b/main.tex
@@ -119,13 +119,13 @@
 \begin{document}
 
 \input macros.tex
-\input chapter1-intro.tex
-\input chapter2-fairness.tex
-\input chapter3-methodology.tex
-\input chapter4-inprocess.tex
+% \input chapter1-intro.tex
+% \input chapter2-fairness.tex
+% \input chapter3-methodology.tex
+% \input chapter4-inprocess.tex
 \input chapter5-postprocess.tex
-\input chapter6-librec.tex
-\input chapter7-conclusion.tex
+% \input chapter6-librec.tex
+% \input chapter7-conclusion.tex
 
 %%%%%%%%%   then the Bibliography, if any   %%%%%%%%%
 \bibliographystyle{plain}	% or "siam", or "alpha", etc.
