--- a/refs.bib
+++ b/refs.bib
@@ -1105,7 +1105,7 @@ url = {http://EconPapers.repec.org/RePEc:net:wpaper:0710}
 
 @article{JENQ2015234,
 title = {Beauty, weight, and skin color in charitable giving},
-journal = {Journal of Economic Behavior & Organization},
+journal = {Journal of Economic Behavior \& Organization},
 volume = {119},
 pages = {234-253},
 year = {2015},
@@ -1128,6 +1128,16 @@ issn = {0740-624X},
 doi = {https://doi.org/10.1016/j.giq.2016.04.007},
 url = {https://www.sciencedirect.com/science/article/pii/S0740624X16300375},
 author = {Sounman Hong and Sun Hyoung Kim},
+}
+
+@article{mitchell2021algorithmic,
+  title={Algorithmic fairness: Choices, assumptions, and definitions},
+  author={Mitchell, Shira and Potash, Eric and Barocas, Solon and D'Amour, Alexander and Lum, Kristian},
+  journal={Annual Review of Statistics and Its Application},
+  volume={8},
+  pages={141--163},
+  year={2021},
+  publisher={Annual Reviews}
 }
 
 
@@ -5914,7 +5924,8 @@ url="https://doi.org/10.1007/978-0-387-85820-3_4"
 }
 
 @misc{lee2001algorithms,
-  title={Algorithms for non-negative matrix factorization Advances in Neural Information Processing 13 (Proc. NIPS∗ 2000)},
+  title={Algorithms for non-negative matrix factorization},
+  booktitle={Advances in Neural Information Processing 13 (Proc. NIPS 2000)},
   author={Lee, DD and Seung, HS},
   year={2001},
   publisher={MIT Press}
